<resources>
    <string name="app_name">TP3_FickleFlight_Grupo7</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- SplashScreen -->
    <string name="app_main_title">FickleFlight</string>
    <string name="app_main_subtitle">Getting you where you need to go</string>

    <!-- Explore -->
    <string name="exp_btn_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Toolbar -->
    <string name="user_photo">Picture</string>

    <!-- Flight Card -->
    <string name="airline_logo">Airline logo</string>
    <string name="flight_duration">Flight duration</string>
    <string name="buscar">Buscar</string>
    <string name="date">Date</string>
    <string name="select_arrival">Select arrival</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="from">From</string>
    <string name="departure_city">Departure City</string>
    <string name="to">To</string>
    <string name="destination_city">Destination City</string>
    <string name="departure_date">Departure Date</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="passengers">Passengers</string>
    <string name="classtype">Class</string>
    <string name="visa_discount">25% discount with your VISA credit or debit cards</string>
    <string name="visa_discount_text">Use your VISA credit or debit card with any transaction and get 25% discount instantly!</string>
    <string name="mastercard_title">Get 20% discount with your Master credit cards</string>
    <string name="mastercard_text">Use your mastercard with any transaction and get 20% discount instantly!</string>
    <string name="flight_icon">Flight Icon</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="offers">Offers</string>
    <string name="select_departure">Select Departure</string>
    <string name="economy_class">Economy</string>


</resources>