<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/flight_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_way"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_way"
                android:backgroundTint="@color/button_selector"
                android:stateListAnimator="@animator/fade" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/round_trip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/round_trip"
                android:backgroundTint="@color/button_selector"
                android:stateListAnimator="@animator/fade" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/departure_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure_city" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/destination_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_city" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_picker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:focusable="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/passenger_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/passengers"
                android:descendantFocusability="blocksDescendants" />

            <Spinner
                android:id="@+id/class_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/classtype"
                android:entries="@array/class_types" />

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search" />
    </LinearLayout>
</ScrollView>