<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExploreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                android:id="@+id/paris_card"
                layout="@layout/paris_card"
                />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paris_card"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/icon_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/flight_icon"
                    android:padding="16dp"
                    android:src="@drawable/flight_icon_title" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trending_destinations"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_destinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offers"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="90dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_offers_horizontal"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:orientation="horizontal"
                android:padding="8dp"
                />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



